# medisync-admin

./: .gitignore  ApiClient.cpp  ApiClient.hpp  AuthImageProvider.cpp  AuthImageProvider.hpp  CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  Main.cpp  NotificationClient.cpp  NotificationClient.hpp  SessionManager.cpp  SessionManager.hpp  compile.sh
.github/workflows/: build.yml
application/: Dashboard.qml  FormField.qml  Icon.qml  Login.qml  Main.qml  NotificationCenter.qml  Sfx.qml  Stats.qml  Theme.qml
application/Hospitals/: DoctorDetail.qml  Hospital.qml  HospitalCreate.qml  HospitalDetail.qml  HospitalManage.qml
application/Patients/: Patient.qml  PatientDetail.qml  PatientVerification.qml
application/Shapes/: GetMShapes.qml
